# pleiades

./: .cursorrules  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  COMMIT_MSG.txt  Cargo.toml  DATA_SOURCES.md  LICENSE  NEXT_STEPS.md  PERFORMANCE.md  README.md  pyproject.toml  run_tests.py
.github/workflows/: wheels.yml
docs/: PERFORMANCE_ANALYSIS.md  PRODUCTION.md  PROFILING.md
python/astrojoin/: __init__.py  analysis.py  cli.py  cone.py  cross_match.py  validation.py
python/astrojoin_core/: __init__.py
python/pleiades/: __init__.py  _log.py  analysis.py  cli.py  cone.py  config.py  cross_match.py  models.py  validation.py
python/pleiades_core/: __init__.py
scripts/: benchmark_cross_match.py  generate_benchmark_fixtures.py  generate_large_catalog.py  generate_test_data.py  poc_large_files.py  profile_io.sh  run_benchmarks.sh  run_profile.sh  tune_cross_match_params.py
src/: engine.rs  gpu.rs  gpu.wgsl  gpu_compact.wgsl  haversine_simd.rs  lib.rs  parquet_mmap.rs  parquet_parallel.rs
tests/: __init__.py  conftest.py  engine_integration.rs
tests/fixtures/: README.md  catalog_a.parquet  catalog_a_small.parquet  catalog_b.parquet  catalog_b_small.parquet
tests/integration/: __init__.py  cross_match_helpers.py  test_cross_match.py
tests/unit/: __init__.py  test_analysis.py  test_api.py  test_cli.py  test_cone.py  test_models.py  test_validation.py
