[project]
name = "pleiades"
version = "0.1.0"
description = "High-performance out-of-core spatial cross-matcher for astronomical catalogs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "astropy>=6.0.0",
    "pyarrow>=18.0.0,<20.0",
    "pydantic>=2.0.0,<3.0",
    "cdshealpix>=0.8.0,<1.0",
    "numpy>=1.24.0,<3.0",
]

[project.scripts]
pleiades = "pleiades.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0,<10.0",
    "pytest-cov>=6.0.0,<8.0",
    "pytest-mock>=3.12.0,<4.0",
    "pytest-timeout>=2.0.0,<3.0",
    "ruff>=0.14.0,<0.15",
    "mypy>=1.11.0,<2.0",
    "pre-commit>=4.0.0,<5.0",
    "maturin>=1.4,<2.0",
    "cffi>=2.0.0",
]

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
manifest-path = "Cargo.toml"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "N",
    "SIM",
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["pyarrow.*", "astropy.*", "cdshealpix.*", "numpy.*", "numpy", "pleiades_core.*", "pleiades_core.pleiades_core"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["scripts.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "unit: Unit tests.",
    "integration: Integration tests (I/O, larger data).",
]

[tool.coverage.run]
source = ["python/pleiades"]
omit = ["**/__init__.py", "**/_core*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 80
